prevent getReportDocumentURL from doubly-encoding the URL